@@ -23,6 +23,7 @@ Revision history for AnyEvent::IRC
         - Implemented prefix<=>mode mapping for nicks
         - Added test utility module and first automated connect test
         - Added debug_console example
+        - Added mode tracking for users on channels, with NAMESX support
 
 0.5     Sun Mar 11 23:54:10 CET 2007
         - added server password support
